Final artwork. Fix small bug.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -92,7 +92,7 @@ From Ancient Greek πάθος (pathos, “suffering”).
     \n<b>2.</b> (rhetoric) A writer\'s attempt to persuade an audience through appeals involving the use of strong emotions not strictly limited to pity.
 	\n<b>3.</b> (literature) An author\'s attempt to evoke a feeling of pity or sympathetic sorrow for a character.
     \n<b>4.</b> (theology, philosophy) In theology and existentialist ethics following Kierkegaard and Heidegger, a deep and abiding commitment of the heart, as in the notion of "finding your passion" as an important aspect of a fully lived, engaged life.
-	\n<b>5.</b><u>(technology) A developer\'s attempt to reunite 0\'s and 1\'s to create an Android app that might help him explore his own limits and live the last part of his youth to its fullest.</u></string>
+	\n<b>5.</b><u>(technology) A developer\'s attempt to reunite 0\'s and 1\'s to create an Android app that might help him explore his own limits and enjoy the last part of his youth.</u></string>
 
     <!-- Legal Noticies Activity -->
     <string name="googleplay_tag">Google Play services attribution:</string>
