--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,6 +133,10 @@ From Ancient Greek πάθος (pathos, “suffering”).
     <string name="thanks_tag">Thanks to:</string>
     <string name="thanks">Jens Schumann</string>
 
+    <!-- Map Activity -->
+    <string name="map_user_marker_title">You</string>
+    <string name="map_user_marker_snippet">Here you are</string>
+
     <!-- Menu item name -->
     <string name="menu_map">Map</string>
     <string name="menu_settings">Settings</string>
@@ -144,7 +148,7 @@ From Ancient Greek πάθος (pathos, “suffering”).
     <string name="time_unknown"></string>
     <string name="action_settings">Settings</string>
 
-    <!-- Arrays -->
+  <!-- Arrays -->
     <string-array name="sites_array">
         <item>I Heart Berlin</item>
         <item>Metal Concerts</item>
